added workspace description
